# claude-agent-rust-sdk

./: CLAUDE.md  Cargo.toml  README.md
docs/: architecture.md
examples/: basic.rs  batch.rs  cached.rs
src/: error.rs  lib.rs  models.rs  streaming.rs  transport.rs
src/batch/: mod.rs
src/client/: builder.rs  mod.rs
src/types/: batch.rs  mod.rs
