[package]
name = "claude-agent-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust SDK for the Claude API with prompt caching and batch processing support"
license = "MIT"
repository = "https://github.com/alexandernicholson/claude-agent-rust-sdk"
keywords = ["claude", "anthropic", "ai", "llm", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
# wiremock requires Rust nightly features (let_chains) in 0.6.x;
# uncomment when using Rust >= 1.87 or nightly.
# wiremock = "0.6"
